tests/multi_byte_byte_codepoint/error.txt
Parse error: ./tests/multi_byte_byte_codepoint/multi_byte_byte_codepoint.fae, line 2: Byte codepoint literal may not contain a multi-byte codepoint
  2|     b'£'
           ^

Validation error: Missing main function
